# maya-plugin-template

./: README.md  my_plugin.py  pyproject.toml
myModule/: demo_plugin.py  myModule.mod
myModule/plug-ins/: hello_world.py
